Ajout de dossiers pour classer les fichiers ainsi qu'un fichier Singleton Vide pour la BD.

--- a/TravailSession/TravailSession/MainWindow.xaml
+++ b/TravailSession/TravailSession/MainWindow.xaml
@@ -10,5 +10,6 @@
 
     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
         <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
+        <TextBlock x:Name="tbc">Ceci est un test</TextBlock>
     </StackPanel>
 </Window>
