--- a/TravailSession/TravailSession/MainWindow.xaml
+++ b/TravailSession/TravailSession/MainWindow.xaml
@@ -14,11 +14,16 @@
             IsSettingsVisible="False">
             <NavigationView.MenuItems>
                 <NavigationViewItem Content="Les activités" x:Name="iActivite" Icon="List"/>
+                <NavigationViewItemHeader Content="Menu administrateur"/>
                 <NavigationViewItem Content="CRUD Activité" x:Name="iActiviteCRUD" Icon="Folder"/>
                 <NavigationViewItem Content="CRUD Adhérent" x:Name="iAdherentCRUD" Icon="Folder"/>
                 <NavigationViewItem Content="CRUD Séances" x:Name="iSeanceCRUD" Icon="Folder"/>
                 <NavigationViewItem Content="Statistiques" x:Name="iStatistique" Icon="Folder"/>
+                <NavigationViewItemSeparator/>
+                <NavigationViewItemSeparator/>
+                <NavigationViewItem Content="Se connecter" x:Name="iLogin" Icon="Admin"/>
             </NavigationView.MenuItems>
+
 
             <Frame x:Name="mainFrame" Grid.Row="1" />
         </NavigationView>
