--- a/TravailSession/TravailSession/MainWindow.xaml
+++ b/TravailSession/TravailSession/MainWindow.xaml
@@ -21,7 +21,8 @@
                 <NavigationViewItem Content="Statistiques" x:Name="iStatistique" Icon="Folder"/>
                 <NavigationViewItemSeparator/>
                 <NavigationViewItemSeparator/>
-                <NavigationViewItem Content="Se connecter" x:Name="iLogin" Icon="Admin"/>
+                <NavigationViewItem Content="Connexion Admin" x:Name="iLoginAdmin" Icon="Admin"/>
+                <NavigationViewItem Content="Connexion Adhérent" x:Name="iLoginAdherent" Icon="Account"/>
             </NavigationView.MenuItems>
 
 
