--- a/TravailSession/TravailSession/Pages/Activite/ActiviteU.xaml
+++ b/TravailSession/TravailSession/Pages/Activite/ActiviteU.xaml
@@ -9,7 +9,46 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+    <Grid Margin="50, 50, 50, 50">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="5*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Row="0" Margin="0, 0, 0, 30">
+            <TextBlock Text="Menu de modification d'une activité" FontSize="32" FontWeight="Bold"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="0" Grid.Row="1">
+            <TextBlock Text="Nom de l'activité:" FontSize="20" Margin="0, 0, 0, 10"/>
+            <TextBox x:Name="tbx_nom"/>
+            <TextBlock x:Name="tbl_erreur_nom" Foreground="red"/>
+
+            <TextBlock Text="Type d'activité:" FontSize="20" Margin="0, 10, 0, 10"/>
+            <TextBox x:Name="tbx_type"/>
+            <TextBlock x:Name="tbl_erreur_type" Foreground="red"/>
+
+            <TextBlock Text="Le coût pour l'organisation:" FontSize="20" Margin="0, 10, 0, 10"/>
+            <TextBox x:Name="tbx_cout"/>
+            <TextBlock x:Name="tbl_erreur_cout" Foreground="red"/>
+
+            <TextBlock Text="Le prix de vente:" FontSize="20" Margin="0, 10, 0, 10"/>
+            <TextBox x:Name="tbx_prix"/>
+            <TextBlock x:Name="tbl_erreur_prix" Foreground="red"/>
+
+
+        </StackPanel>
+
+        <StackPanel Grid.Column="2" Grid.Row="1">
+            <Button FontSize="20">
+                Ajouter
+            </Button>
+        </StackPanel>
 
     </Grid>
 </Page>
