--- a/TravailSession/TravailSession/ConnexionAdmin.xaml
+++ b/TravailSession/TravailSession/ConnexionAdmin.xaml
@@ -6,15 +6,20 @@
     xmlns:local="using:TravailSession"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" >
+    mc:Ignorable="d"
+    Closing="ContentDialog_Closing"
+    >
     
      
-    <!--PrimaryButtonClick="ContentDialog_PrimaryButtonClick"-->
+    
    
     <StackPanel>
         
-            <TextBox Header="Nom" x:Name="tbx_user" Margin="5"/>
-        <PasswordBox Header="Mot de passe " x:Name="pwd_user" Margin="5" />
+            <TextBox Header="Nom" x:Name="tbx_user" Margin="5" Text="aa-1344-123"/>
+            <TextBlock x:Name="tbl_validation_user"/>
+            <PasswordBox Header="Mot de passe " x:Name="pwd_user" Margin="5" Password="12" />
+            <TextBlock x:Name="tbl_validation_pwd"/>
+        
     </StackPanel>
 
 </ContentDialog>
