--- a/TravailSession/TravailSession/Pages/Adherent/AdherentC.xaml
+++ b/TravailSession/TravailSession/Pages/Adherent/AdherentC.xaml
@@ -38,7 +38,7 @@
             <TextBox x:Name="tbx_adresse"/>
             <TextBlock x:Name="tbl_erreur_adresse" Foreground="red"/>
 
-            <TextBlock Text="Adresse de l'adherent:" FontSize="20" Margin="0, 10, 0, 10"/>
+            <TextBlock Text="Date naissance de l'adhérent:" FontSize="20" Margin="0, 10, 0, 10"/>
             <DatePicker x:Name="dp_naissance" />
             <TextBlock x:Name="tbl_erreur_naissance" Foreground="red"/>
 
@@ -49,6 +49,12 @@
                 Ajouter
             </Button>
             <TextBlock x:Name="tbl_non_ajout" Foreground="DarkRed"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="2" Grid.Row="0">
+            <Button x:Name="btn_retour" HorizontalAlignment="Right" FontSize="20" Click="btn_retour_Click" FontWeight="Medium">
+                Retour au CRUD adhérent
+            </Button>
         </StackPanel>
 
     </Grid>
