ajout d'un singleton pour déterminer si un usager est connecté pour la page d'accueil

--- a/TravailSession/TravailSession/Pages/AccueilActivite.xaml
+++ b/TravailSession/TravailSession/Pages/AccueilActivite.xaml
@@ -25,6 +25,8 @@
         <StackPanel Grid.Row="0">
             <TextBlock Text="Bienvenue, " FontSize="32" FontWeight="Bold"/>
             <TextBlock Text="voici les activités offertes par notre centre" FontSize="20" FontWeight="SemiBold"/>
+
+            <TextBlock x:Name="tbl_connexion">test</TextBlock>
         </StackPanel>
 
 
