--- a/TravailSession/TravailSession/Pages/AccueilActivite.xaml
+++ b/TravailSession/TravailSession/Pages/AccueilActivite.xaml
@@ -25,8 +25,10 @@
         <StackPanel Grid.Row="0">
             <TextBlock Text="Bienvenue, " FontSize="32" FontWeight="Bold"/>
             <TextBlock Text="voici les activités offertes par notre centre" FontSize="20" FontWeight="SemiBold"/>
+        </StackPanel>
 
-            <TextBlock x:Name="tbl_connexion">test</TextBlock>
+        <StackPanel x:Name="stkpnl_inscription" Grid.Row="1" Grid.Column="0" Margin="0,20,0,0" Visibility="Collapsed">
+            <Button x:Name="btn_inscription" Content="Voir mes inscriptions" Click="btn_inscription_Click"  FontWeight="Medium" FontSize="20"/>
         </StackPanel>
 
 
@@ -41,7 +43,7 @@
                     <TextBlock FontSize="30" FontWeight="ExtraLight" Text="Nom de l'activité" />
                 </StackPanel>
 
-                <StackPanel Margin="0, 0, 100, 0" >
+                <StackPanel Margin="0, 0, 90, 0" >
                     <TextBlock FontSize="30" FontWeight="ExtraLight" Text="Type" />
                 </StackPanel>
 
@@ -56,7 +58,7 @@
 
             </StackPanel>
 
-            <ListView x:Name="lv_activite" Height="1000">
+            <ListView x:Name="lv_activite" Height="1000" SelectionChanged="lv_activite_SelectionChanged">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="Classes:ActiviteClasse">
                         <StackPanel Orientation="Horizontal" BorderBrush="AliceBlue">
@@ -65,11 +67,11 @@
                                 <TextBlock FontSize="25" FontWeight="Bold" Text="{x:Bind Nom}" />
                             </StackPanel>
 
-                            <StackPanel Margin="0, 6, 100, 0" Width="180">
+                            <StackPanel Margin="0, 6, 75, 0" Width="180">
                                 <TextBlock FontSize="18" FontWeight="SemiBold" Text="{x:Bind Type}" />
                             </StackPanel>
 
-                            <StackPanel Margin="0, 12, 100, 0" Width="100" Orientation="Horizontal">
+                            <StackPanel Margin="0, 12, 250, 0" Width="100" Orientation="Horizontal">
                                 <TextBlock FontFamily="18" Text="{x:Bind PrixVenteClient}" />
                                 <TextBlock FontFamily="18" Text="$"/>
                             </StackPanel>
