--- a/TravailSession/TravailSession/Pages/Adherent/AdherentC.xaml
+++ b/TravailSession/TravailSession/Pages/Adherent/AdherentC.xaml
@@ -39,17 +39,22 @@
             <TextBlock x:Name="tbl_erreur_adresse" Foreground="red"/>
 
             <TextBlock Text="Date naissance de l'adhérent:" FontSize="20" Margin="0, 10, 0, 10"/>
-            <DatePicker x:Name="dp_naissance" />
+            <CalendarDatePicker x:Name="dp_naissance" />
             <TextBlock x:Name="tbl_erreur_naissance" Foreground="red"/>
+            
+            <StackPanel Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center">
+                <Button x:Name="btn_ajout" FontSize="20" Click="btn_ajout_Click">
+                    Ajouter
+                </Button>
+                <TextBlock x:Name="tbl_non_ajout" Foreground="DarkRed"/>
+                
+            </StackPanel>
+            
+            
 
         </StackPanel>
 
-        <StackPanel Grid.Column="2" Grid.Row="1">
-            <Button x:Name="btn_ajout" FontSize="20" Click="btn_ajout_Click">
-                Ajouter
-            </Button>
-            <TextBlock x:Name="tbl_non_ajout" Foreground="DarkRed"/>
-        </StackPanel>
+        
 
         <StackPanel Grid.Column="2" Grid.Row="0">
             <Button x:Name="btn_retour" HorizontalAlignment="Right" FontSize="20" Click="btn_retour_Click" FontWeight="Medium">
