--- a/TravailSession/TravailSession/Pages/Adherent/AdherentU.xaml
+++ b/TravailSession/TravailSession/Pages/Adherent/AdherentU.xaml
@@ -7,9 +7,60 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    xmlns:Classes="using:TravailSession.Classes">
 
-    <Grid>
+    <Grid Margin="50, 50, 50, 50">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="5*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Row="0" Grid.ColumnSpan="3" Margin="0, 0, 0, 30">
+            <TextBlock Text="Menu d'ajout d'un adherent" FontSize="32" FontWeight="Bold"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="0" Grid.Row="1">
+            <TextBlock Text="Nom de l'adherent:" FontSize="20" Margin="0, 0, 0, 10"/>
+            <TextBox x:Name="tbx_nom"/>
+            <TextBlock x:Name="tbl_erreur_nom" Foreground="red"/>
+
+            <TextBlock Text="Prenom de l'adherent:" FontSize="20" Margin="0, 10, 0, 10"/>
+            <TextBox x:Name="tbx_prenom"/>
+            <TextBlock x:Name="tbl_erreur_prenom" Foreground="red"/>
+
+            <TextBlock Text="Adresse de l'adherent:" FontSize="20" Margin="0, 10, 0, 10"/>
+            <TextBox x:Name="tbx_adresse"/>
+            <TextBlock x:Name="tbl_erreur_adresse" Foreground="red"/>
+
+            <TextBlock Text="Date naissance de l'adhérent:" FontSize="20" Margin="0, 10, 0, 10"/>
+            <CalendarDatePicker x:Name="dp_naissance" />
+            <TextBlock x:Name="tbl_erreur_naissance" Foreground="red"/>
+
+            <StackPanel Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center">
+                <Button x:Name="btn_mod" FontSize="20" Click="btn_mod_Click">
+                   Modifier
+                </Button>
+                <TextBlock x:Name="tbl_non_ajout" Foreground="DarkRed"/>
+
+            </StackPanel>
+
+
+
+        </StackPanel>
+
+
+
+        <StackPanel Grid.Column="2" Grid.Row="0">
+            <Button x:Name="btn_retour" HorizontalAlignment="Right" FontSize="20" Click="btn_retour_Click" FontWeight="Medium">
+                Retour au CRUD adhérent
+            </Button>
+        </StackPanel>
 
     </Grid>
 </Page>
